config/waybar/style.css
/* 
* __        __          _                  ____  _         _       
* \ \      / /_ _ _   _| |__   __ _ _ __  / ___|| |_ _   _| | ___  
*  \ \ /\ / / _` | | | | '_ \ / _` | '__| \___ \| __| | | | |/ _ \ 
*   \ V  V / (_| | |_| | |_) | (_| | |     ___) | |_| |_| | |  __/ 
*    \_/\_/ \__,_|\__, |_.__/ \__,_|_|    |____/ \__|\__, |_|\___| 
*                 |___/                              |___/ 
* by n00bady (2025)
*/

/* -=COLORS=- 
* based on the gruvbox dark palette
*
*  --bg-lighter: #7c6f64;
*  --bg-light: #3c3836;
*  --bg-dark: #282828;
*  --bg-workspaces-unfocused: #282828;
*  --bg-border: #fabd2d;
*  --fg-text-1: #928374;
*  --fg-text-2: #ebdbb2;
*  --fg-text-3: #8ec07c;
*  --icon-color: #fabd2d;
*  --critical-color: #cc241d;
*
*  Fonts 
*  --font-family:
*    "DepartureMono Nerd Font Propo", "Font Awesome 7 Free",
*    "Font Awesome 7 Brands", Arial;
*  --font-size: 14px;
*
*/

/*
* -=GENERAL=- 
*/

* {
  font-family:
    "DepartureMono Nerd Font Propo", "Font Awesome 7 Free",
    "Font Awesome 7 Brands", Arial;
  font-size: 14px;
  border: none;
  /* min-height: 30px; */
}

window#waybar {
  background: transparent;
  border-radius: 10px;
  /* border: 1px solid #fabd2d; */
}

/*
* -=WORKSPACES=-
*/

#workspaces {
  background-color: #3c3836;
  border-color: #fabd2d;
  font-weight: bold;
  border-radius: 10px;
  padding: 2px 5px 2px 5px;
  margin: 3px;
}

#workspaces button {
  color: #928374;
  background-color: #282828;
  border-radius: 5px;
  transition: all 0.1s linear;
}

#workspaces button.active {
  color: #ebdbb2;
  background: #3c3836;
  border-radius: 5px;
  min-width: 30px;
  transition: all 0.25s linear;
}

#workspaces button.hover {
  color: #ebdbb2;
  background-color: #7c6f64;
  border-radius: 10px;
}

#workspaces button.needs-attention {
  color: #cc241d;
  border-radius: 10px;
  transition: all 0.5s ease-in;
}

/*
* -=TOOLTIPS=-
*/

tooltip {
  background-color: #282828;
  border-radius: 10px;
  opacity: 0.9;
  padding: 20px;
  margin: 1px;
}

tooltip label {
  color: #ebdbb2;
}

/*
* -=WINDOW=-
*/

#window {
  color: #ebdbb2;
  background-color: rgba(60, 56, 54, 0.75);
  font-size: 14px;
  font-weight: bold;
  border-radius: 10px;
  padding-left: 5px;
  padding-right: 5px;
  margin: 3px;
}

window#waybar.empty #window {
  background-color: transparent;
}

/*
* -=IDLE INHIBITOR=-
*/

#idle_inhibitor {
  background-color: #3c3836;
  color: #fabd2d;
  font-size: 16px;
  font-weight: bold;
  border-radius: 10px;
  padding-left: 5px;
  padding-right: 5px;
  margin: 3px;
}

#idle_inhibitor.activated {
  color: #cc241d;
  background-color: #3c3836;
}

/*
* -=DUNST NOTIFICATIONS=-
*/

#custom-dunst {
  color: #fabd2d;
  background-color: #3c3836;
  font-size: 18px;
  border-radius: 10px;
  padding-left: 5px;
  padding-right: 5px;
  margin: 3px;
}

/*
* -=CUSTOM EXIT MENU=-
*/

#custom-exit {
  color: #fabd2d;
  background-color: #3c3836;
  font-size: 19px;
  border-radius: 50%;
  border: 2px dotted #fabd2d;
  margin-left: 15px;
}

#custom-exit:hover {
  color: #ebdbb2;
  background-color: #cc241d;
  border: 2px dotted #ebdbb2;
}

/*
* -=HARDWARE GROUP=-
*/

#cpu {
  color: #ebdbb2;
  background-color: #3c3836;
  border-radius: 10px;
  font-size: 14px;
  border-radius: 10px;
  padding-left: 5px;
  padding-right: 5px;
  margin: 3px;
}

#temperature {
  color: #ebdbb2;
  background-color: #3c3836;
  border-radius: 10px;
  font-size: 14px;
  padding-left: 5px;
  padding-right: 5px;
  margin: 3px;
}

#temperature.critical {
  color: #cc241d;
}

#custom-gpu-usage {
  color: #ebdbb2;
  background-color: #3c3836;
  border-radius: 10px;
  font-size: 15px;
  padding-left: 5px;
  padding-right: 5px;
  margin: 3px;
}

#disk,
#memory {
  color: #ebdbb2;
  background-color: #3c3836;
  font-size: 14px;
  border-radius: 10px;
  padding-left: 5px;
  padding-right: 5px;
  margin: 3px;
}

/*
* -=LANGUAGE=-
*/

#language {
  color: #ebdbb2;
  background-color: #3c3836;
  font-size: 16px;
  border-radius: 10px;
  padding-left: 5px;
  padding-right: 5px;
  margin: 3px;
}

/*
* -=CLOCK=-
*/

#clock {
  color: #fabd2d;
  background-color: #3c3836;
  font-family: DepartureMono Nerd Font Propo;
  font-size: 14px;
  font-weight: bold;
  border-radius: 10px;
  padding-left: 5px;
  padding-right: 5px;
  margin: 3px;
}

/*
* -=PULSEAUDIO=-
*/

#pulseaudio {
  color: #ebdbb2;
  background-color: #3c3836;
  font-size: 14px;
  border-radius: 10px;
  padding-left: 5px;
  padding-right: 5px;
  margin: 3px;
}

#pulseaudio.muted {
  color: #928374;
  background-color: #282828;
}

/*
* -=NETWORK=-
*/

#network {
  color: #ebdbb2;
  background-color: #3c3836;
  font-size: 14px;
  border-radius: 10px;
  padding-left: 5px;
  padding-right: 5px;
  margin: 3px;
}

#network.ethernet {
  color: #ebdbb2;
  background-color: #3c3836;
}

#network.wifi {
  color: #ebdbb2;
  background-color: #3c3836;
}

/*
* -=TRAY=-
*/

#tray {
  background-color: #3c3836;
  border-radius: 10px;
  padding-left: 5px;
  padding-right: 5px;
  margin: 3px;
}

#tray > .passive {
  -gtk-icon-effect: dim;
}

#tray > .needs-attention {
  -gtk-icon-effect: highlight;
}

